Fixed loading overlay causes scrollbars issue

--- a/apps/sudoku-ang/src/app/components/board/board.component.scss
+++ b/apps/sudoku-ang/src/app/components/board/board.component.scss
@@ -43,10 +43,11 @@ $border: 3px solid $borderColor;
   .loading, .loading > .backdrop {
     position: absolute;
     z-index: 9999;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
+    box-sizing: border-box;
   }
 
   .loading {
