--- a/apps/sudoku-ang/src/app/components/controls/controls.component.scss
+++ b/apps/sudoku-ang/src/app/components/controls/controls.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  height:100%;
 
   @media (orientation: portrait) {
     flex-direction: row;
