--- a/apps/sudoku-ang/src/app/components/inputs/inputs.component.scss
+++ b/apps/sudoku-ang/src/app/components/inputs/inputs.component.scss
@@ -1,6 +1,7 @@
 .numbers {
   display: flex;
   flex-direction: column;
+  height:100%;
   @media (orientation: portrait) {
     flex-direction: row;
   }
